introduce csrf token to prevent attacks

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,7 +56,7 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 app.title=Newsletter with Grails and AngularJS
 
-customer.list.title = Kundenliste
+customer.list.title = Select Recipients
 
 customer.label=Customer
 customer.mailto.label=Mailto
